change favicon and web title

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/etf.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>潔淨能源ETF（00696）| 伊莉莎白證券投資</title>
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
